// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectIUCNForm changes fields on the IUCN menu items as expected 1`] = `
<DocumentFragment>
  <legend
    class="MuiTypography-root MuiTypography-body1"
  >
    IUCN Conservation Actions Classifications (Optional)
  </legend>
  <div
    class="MuiBox-root MuiBox-root-25"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      Conservation actions are specific actions or sets of tasks undertaken by project staff designed to reach each of the project's objectives.
    </p>
  </div>
  <div
    class="MuiBox-root MuiBox-root-26"
  >
    <div
      class="MuiBox-root MuiBox-root-28"
      data-testid="iucn-classification-grid"
    >
      <div
        class="MuiBox-root MuiBox-root-29 makeStyles-iucnInputContainer-23"
      >
        <div
          class="MuiBox-root MuiBox-root-30 makeStyles-iucnInput-24"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="classification"
            >
              Classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="Classification"
                aria-labelledby="classification iucn.classificationDetails.[0].classification"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].classification"
                role="button"
                tabindex="0"
              >
                Class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].classification"
                tabindex="-1"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-31 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-33 PrivateNotchedOutline-legendNotched-34"
                >
                  <span>
                    Classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-35"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-36 makeStyles-iucnInput-24"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="subClassification1"
            >
              Sub-classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification1"
                aria-labelledby="subClassification1 iucn.classificationDetails.[0].subClassification1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification1"
                role="button"
                tabindex="0"
              >
                A Sub-class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification1"
                tabindex="-1"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-31 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-33 PrivateNotchedOutline-legendNotched-34"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-37"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-38 makeStyles-iucnInput-24"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-focused Mui-focused"
              data-shrink="true"
              id="subClassification2"
            >
              Sub-classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root Mui-focused Mui-focused MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification2"
                aria-labelledby="subClassification2 iucn.classificationDetails.[0].subClassification2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification2"
                role="button"
                tabindex="0"
              >
                A Sub-class 2
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification2"
                tabindex="-1"
                value="5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-31 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-33 PrivateNotchedOutline-legendNotched-34"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-focused"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-39"
      >
        <button
          aria-label="delete"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-27"
    >
      <button
        aria-label="Add Another"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Classification
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectIUCNForm renders correctly with default empty values 1`] = `
<DocumentFragment>
  <legend
    class="MuiTypography-root MuiTypography-body1"
  >
    IUCN Conservation Actions Classifications (Optional)
  </legend>
  <div
    class="MuiBox-root MuiBox-root-3"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      Conservation actions are specific actions or sets of tasks undertaken by project staff designed to reach each of the project's objectives.
    </p>
  </div>
  <div
    class="MuiBox-root MuiBox-root-4"
  >
    <div
      class="MuiBox-root MuiBox-root-5"
    >
      <button
        aria-label="Add Another"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Classification
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectIUCNForm renders correctly with error on the iucn classification individual fields 1`] = `
<DocumentFragment>
  <legend
    class="MuiTypography-root MuiTypography-body1"
  >
    IUCN Conservation Actions Classifications (Optional)
  </legend>
  <div
    class="MuiBox-root MuiBox-root-84"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      Conservation actions are specific actions or sets of tasks undertaken by project staff designed to reach each of the project's objectives.
    </p>
  </div>
  <div
    class="MuiBox-root MuiBox-root-85"
  >
    <div
      class="MuiBox-root MuiBox-root-86"
      data-testid="iucn-classification-grid"
    >
      <div
        class="MuiBox-root MuiBox-root-87 makeStyles-iucnInputContainer-82"
      >
        <div
          class="MuiBox-root MuiBox-root-88 makeStyles-iucnInput-83"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="classification"
            >
              Classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="Classification"
                aria-labelledby="classification iucn.classificationDetails.[0].classification"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].classification"
                role="button"
                tabindex="0"
              >
                Class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].classification"
                tabindex="-1"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-89 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-91 PrivateNotchedOutline-legendNotched-92"
                >
                  <span>
                    Classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-93"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-94 makeStyles-iucnInput-83"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="subClassification1"
            >
              Sub-classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification1"
                aria-labelledby="subClassification1 iucn.classificationDetails.[0].subClassification1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification1"
                role="button"
                tabindex="0"
              >
                A Sub-class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification1"
                tabindex="-1"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-89 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-91 PrivateNotchedOutline-legendNotched-92"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-95"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-96 makeStyles-iucnInput-83"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="subClassification2"
            >
              Sub-classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification2"
                aria-labelledby="subClassification2 iucn.classificationDetails.[0].subClassification2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification2"
                role="button"
                tabindex="0"
              >
                A Sub-class 2
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification2"
                tabindex="-1"
                value="5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-89 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-91 PrivateNotchedOutline-legendNotched-92"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-97"
      >
        <button
          aria-label="delete"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-98"
    >
      <button
        aria-label="Add Another"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Classification
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectIUCNForm renders correctly with error on the iucn classifications due to duplicates 1`] = `
<DocumentFragment>
  <legend
    class="MuiTypography-root MuiTypography-body1"
  >
    IUCN Conservation Actions Classifications (Optional)
  </legend>
  <div
    class="MuiBox-root MuiBox-root-59"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      Conservation actions are specific actions or sets of tasks undertaken by project staff designed to reach each of the project's objectives.
    </p>
  </div>
  <div
    class="MuiBox-root MuiBox-root-60"
  >
    <div
      class="MuiBox-root MuiBox-root-61"
      data-testid="iucn-classification-grid"
    >
      <div
        class="MuiBox-root MuiBox-root-62 makeStyles-iucnInputContainer-57"
      >
        <div
          class="MuiBox-root MuiBox-root-63 makeStyles-iucnInput-58"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="classification"
            >
              Classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="Classification"
                aria-labelledby="classification iucn.classificationDetails.[0].classification"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].classification"
                role="button"
                tabindex="0"
              >
                Class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].classification"
                tabindex="-1"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-64 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-66 PrivateNotchedOutline-legendNotched-67"
                >
                  <span>
                    Classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-68"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-69 makeStyles-iucnInput-58"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="subClassification1"
            >
              Sub-classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification1"
                aria-labelledby="subClassification1 iucn.classificationDetails.[0].subClassification1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification1"
                role="button"
                tabindex="0"
              >
                A Sub-class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification1"
                tabindex="-1"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-64 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-66 PrivateNotchedOutline-legendNotched-67"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-70"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-71 makeStyles-iucnInput-58"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="subClassification2"
            >
              Sub-classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification2"
                aria-labelledby="subClassification2 iucn.classificationDetails.[0].subClassification2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification2"
                role="button"
                tabindex="0"
              >
                A Sub-class 2
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification2"
                tabindex="-1"
                value="5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-64 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-66 PrivateNotchedOutline-legendNotched-67"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-72"
      >
        <button
          aria-label="delete"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-73"
      data-testid="iucn-classification-grid"
    >
      <div
        class="MuiBox-root MuiBox-root-74 makeStyles-iucnInputContainer-57"
      >
        <div
          class="MuiBox-root MuiBox-root-75 makeStyles-iucnInput-58"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="classification"
            >
              Classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="Classification"
                aria-labelledby="classification iucn.classificationDetails.[1].classification"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[1].classification"
                role="button"
                tabindex="0"
              >
                Class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[1].classification"
                tabindex="-1"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-64 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-66 PrivateNotchedOutline-legendNotched-67"
                >
                  <span>
                    Classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-76"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-77 makeStyles-iucnInput-58"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="subClassification1"
            >
              Sub-classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification1"
                aria-labelledby="subClassification1 iucn.classificationDetails.[1].subClassification1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[1].subClassification1"
                role="button"
                tabindex="0"
              >
                A Sub-class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[1].subClassification1"
                tabindex="-1"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-64 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-66 PrivateNotchedOutline-legendNotched-67"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-78"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-79 makeStyles-iucnInput-58"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="subClassification2"
            >
              Sub-classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification2"
                aria-labelledby="subClassification2 iucn.classificationDetails.[1].subClassification2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[1].subClassification2"
                role="button"
                tabindex="0"
              >
                A Sub-class 2
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[1].subClassification2"
                tabindex="-1"
                value="5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-64 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-66 PrivateNotchedOutline-legendNotched-67"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-80"
      >
        <button
          aria-label="delete"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-81"
    >
      <button
        aria-label="Add Another"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Classification
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProjectIUCNForm renders correctly with existing details values 1`] = `
<DocumentFragment>
  <legend
    class="MuiTypography-root MuiTypography-body1"
  >
    IUCN Conservation Actions Classifications (Optional)
  </legend>
  <div
    class="MuiBox-root MuiBox-root-8"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      Conservation actions are specific actions or sets of tasks undertaken by project staff designed to reach each of the project's objectives.
    </p>
  </div>
  <div
    class="MuiBox-root MuiBox-root-9"
  >
    <div
      class="MuiBox-root MuiBox-root-10"
      data-testid="iucn-classification-grid"
    >
      <div
        class="MuiBox-root MuiBox-root-11 makeStyles-iucnInputContainer-6"
      >
        <div
          class="MuiBox-root MuiBox-root-12 makeStyles-iucnInput-7"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="classification"
            >
              Classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="Classification"
                aria-labelledby="classification iucn.classificationDetails.[0].classification"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].classification"
                role="button"
                tabindex="0"
              >
                Class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].classification"
                tabindex="-1"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                >
                  <span>
                    Classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-17"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-18 makeStyles-iucnInput-7"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="subClassification1"
            >
              Sub-classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification1"
                aria-labelledby="subClassification1 iucn.classificationDetails.[0].subClassification1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification1"
                role="button"
                tabindex="0"
              >
                A Sub-class 1
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification1"
                tabindex="-1"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-19"
        >
          <svg
            role="presentation"
            style="width: 1.125rem; height: 1.125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root MuiBox-root-20 makeStyles-iucnInput-7"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              id="subClassification2"
            >
              Sub-classification
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-label="subClassification2"
                aria-labelledby="subClassification2 iucn.classificationDetails.[0].subClassification2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="iucn.classificationDetails.[0].subClassification2"
                role="button"
                tabindex="0"
              >
                A Sub-class 2
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="iucn.classificationDetails.[0].subClassification2"
                tabindex="-1"
                value="5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                >
                  <span>
                    Sub-classification
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-21"
      >
        <button
          aria-label="delete"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-22"
    >
      <button
        aria-label="Add Another"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Add Classification
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
